--- a/package.json
+++ b/package.json
@@ -15,17 +15,20 @@
   "author": "hamza-69",
   "license": "MIT",
   "dependencies": {
-    "@eslint/js": "^9.28.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "eslint": "^9.28.0",
     "express": "^5.1.0",
-    "globals": "^16.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.10",
     "stylistic": "^0.2.4"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.28.0",
+    "@stylistic/eslint-plugin-js": "^4.4.0",
+    "eslint": "^9.28.0",
+    "globals": "^16.2.0"
   }
 }
